--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ authors = ["Mattias Päivärinta <mattias.paivarinta@iis.se>"]
 pulldown-cmark = { version = "0.0.11", default-features = false }
 structopt = "0.1.0"
 structopt-derive = "0.1.0"
+url = "1.5.1"
