--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Mattias Päivärinta <mattias.paivarinta@iis.se>"]
 
 [dependencies]
+bytecount = "0.2.0"
 pulldown-cmark = { version = "0.0.11", default-features = false }
 structopt = "0.1.0"
 structopt-derive = "0.1.0"
