--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Mattias Päivärinta <mattias.paivarinta@iis.se>"]
 [dependencies]
 bytecount = "0.2.0"
 pulldown-cmark = { version = "0.0.11", default-features = false }
+reqwest = "0.8.0"
 structopt = "0.1.0"
 structopt-derive = "0.1.0"
 url = "1.5.1"
