--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,6 @@ reqwest = "0.8.0"
 shell-escape = "0.1.3"
 structopt = "0.1.0"
 structopt-derive = "0.1.0"
+unicode_categories = "0.1.1"
+unicode-normalization = "0.1.5"
 url = "1.5.1"
