--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Mattias Päivärinta <mattias.paivarinta@iis.se>"]
 
 [dependencies]
 bytecount = "0.2.0"
+htmlstream = "0.1.3"
 pulldown-cmark = { version = "0.0.11", default-features = false }
 reqwest = "0.8.0"
 shell-escape = "0.1.3"
