--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,12 @@ name = "mdlinks"
 version = "0.1.0"
 authors = ["Mattias Päivärinta <mattias.paivarinta@iis.se>"]
 
+[lib]
+name = "mdlinks"
+
+[[bin]]
+name = "mdlinks"
+
 [dependencies]
 bytecount = "0.2.0"
 htmlstream = "0.1.3"
