--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,12 @@
 name = "linky"
 version = "0.1.0"
 authors = ["Mattias Päivärinta <mattias.paivarinta@iis.se>"]
+description = "Extract and check links from Markdown files"
+repository = "https://github.com/mattias-p/linky"
+readme = "README.md"
+keywords = ["commonmark","extract","validate","links","documentation"]
+categories = ["command-line-utilities"]
+license = "Apache-2.0"
 
 [dependencies]
 bytecount = "0.2.0"
