--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,11 @@ license = "Apache-2.0"
 [dependencies]
 bytecount = "0.2.0"
 htmlstream = "0.1.3"
+lazy_static = "0.2.9"
 pulldown-cmark = { version = "0.0.11", default-features = false }
 regex = "0.2.2"
 reqwest = "0.8.0"
 shell-escape = "0.1.3"
 structopt = "0.1.0"
 structopt-derive = "0.1.0"
-unicode-normalization = "0.1.5"
-unicode_categories = "0.1.1"
 url = "1.5.1"
