--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "linky"
 version = "0.1.0"
-authors = ["Mattias Päivärinta <mattias.paivarinta@iis.se>"]
+authors = ["Mattias Päivärinta <mattias@paivarinta.se>"]
 description = "Extract and check links from Markdown files"
 repository = "https://github.com/mattias-p/linky"
 readme = "README.md"
