--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,10 @@ include = [
 
 [dependencies]
 bytecount = "0.3.1"
-pretty_env_logger = "0.1.1"
 htmlstream = "0.1.3"
 lazy_static = "0.2.9"
 log = "0.3"
+pretty_env_logger = "0.1.1"
 pulldown-cmark = { version = "0.0.11", default-features = false }
 regex = "0.2.2"
 reqwest = "0.8.0"
@@ -26,3 +26,4 @@ shell-escape = "0.1.3"
 structopt = "0.1.0"
 structopt-derive = "0.1.0"
 url = "1.5.1"
+xhtmlchardet = "2.0.0"
