--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ lazy_static = "0.2.9"
 log = "0.4"
 pretty_env_logger = "0.2"
 pulldown-cmark = { version = "0.0.11", default-features = false }
+rayon = "1.0"
 regex = "0.2.2"
 reqwest = "0.8.0"
 shell-escape = "0.1.3"
