--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,11 +20,12 @@ encoding = "0.2"
 htmlstream = "0.1.3"
 lazy_static = "0.2.9"
 log = "0.4"
+mime = "0.3.13"
 pretty_env_logger = "0.2"
 pulldown-cmark = { version = "0.0.11", default-features = false }
 rayon = "1.0"
 regex = "0.2.2"
-reqwest = "0.8.6"
+reqwest = "0.9.17"
 shell-escape = "0.1.3"
 structopt = "0.2"
 url = "1.5.1"
