Avoid uninstalling the existing rust toolchain

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           toolchain: stable
           profile: minimal
-          default: true
+          override: true
       - uses: actions-rs/cargo@v1
         with:
           command: build
