--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ pretty_env_logger = "0.2"
 pulldown-cmark = { version = "0.6", default-features = false }
 rayon = "1.0"
 regex = "0.2.2"
-reqwest = "0.9.17"
+reqwest = { version = "0.11.18", features = ["blocking"] }
 shell-escape = "0.1.3"
 structopt = "0.3"
 url = "1.5.1"
