--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ mime = "0.3.13"
 pretty_env_logger = "0.2"
 pulldown-cmark = { version = "0.6", default-features = false }
 rayon = "1.0"
-regex = "0.2.2"
+regex = ">=1.5.5"
 reqwest = { version = "0.11.18", features = ["blocking"] }
 shell-escape = "0.1.3"
 structopt = "0.3"
