--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ edition = "2018"
 
 [dependencies]
 bytecount = "0.3.1"
+clap = { version = "4.3.4", features = ["derive"] }
 encoding = "0.2"
 htmlstream = "0.1.3"
 lazy_static = "1.4.0"
@@ -27,7 +28,6 @@ rayon = "1.0"
 regex = ">=1.5.5"
 reqwest = { version = "0.11.18", features = ["blocking"] }
 shell-escape = "0.1.3"
-structopt = "0.3"
 url = "1.5.1"
 urlencoding = "1.0.0"
 xhtmlchardet = "2.0.0"
