--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,12 +17,12 @@ edition = "2018"
 [dependencies]
 bytecount = "0.3.1"
 clap = { version = "4.3.4", features = ["derive"] }
-encoding = "0.2"
+encoding_rs = "0.8.32"
 htmlstream = "0.1.3"
 lazy_static = "1.4.0"
 log = "0.4"
 mime = "0.3.13"
-pretty_env_logger = "0.5"
+pretty_env_logger = "0.5.0"
 pulldown-cmark = { version = "0.6", default-features = false }
 rayon = "1.0"
 regex = ">=1.5.5"
